2003-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line-format, w3m-tab-line-timer,
	w3m-tab-line): Remove the timer operation temporally.

2003-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-xmas.el (w3m-make-spinner-image): Bind `format-alist' to
	nil.

2003-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line-timer): New variable.
	(w3m-tab-line): Use it to control this function running too
	frequently; simplify the source code.

	* w3m-favicon.el (w3m-favicon-image-of): Abolish.
	(w3m-favicon-retrieve): Use a timer to redraw Emacs frame.

	* w3m-xmas.el (w3m-xmas-space-before-favicon): New user option.
	(w3m-xmas-space-before-spinner): New user option.
	(w3m-make-spinner-image): Make sure the `gif' feature is available.

	* w3m.el (w3m-buffer-setup): Use `w3m-xmas-space-before-spinner'
	and `w3m-xmas-space-before-favicon'.

2003-09-26  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mailarc.el (shimbun-get-headers): Allow double quoted
	string for href attribute.

	* shimbun/sb-quickml.el (shimbun-quickml-groups):
	Added "software-patent".

2003-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* icons/spinner.gif: New file (without LZW compression).
	* icons30/spinner.gif: Ditto.

	* Makefile.in (install-icons, install-icons30): Also install gifs.

	* w3m-xmas.el (w3m-make-spinner-image): Use the spinner.gif file.

	* w3m-e21.el (w3m-tab-line-format): New variable (see doc-string).
	(w3m-tab-line): Use it; use a timer to suppress this function
	running too frequently.

2003-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-spinner-image): New variable.
	(w3m-make-spinner-image): New function.

	* w3m.el (w3m-buffer-setup): Call `w3m-make-spinner-image', show a
	spinner in the modeline under XEmacs.

2003-09-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-put-property): Don't call intern if it is
	not a string.
	(w3m-form-get-property): Ditto.
	(w3m-form-put): Added argument ID.